# mlmanager

./: .env.enhanced.example  .env.example  .env.local  .gitignore  256_CHANNEL_ISSUE_RESOLUTION.md  ARTERY_CLASSIFICATION_IMPLEMENTATION.md  CONTAINER_TESTING_RESULTS.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  Makefile  PULL_REQUEST.md  README.md  SEMANTIC_SEGMENTATION_FIXES_SUMMARY.md  alias_setup.sh  debug_device_detection.py  debug_mlflow_early_finish.py  debug_process_hang.py  debug_training_startup.py  diagnose_mlflow_issues.py  docker-compose.enhanced.yml  docker-compose.gpu.yml  docker-compose.highmem.yml  docker-compose.yml  file_test.py  manage.py  mlflow.db  organize_artifacts.py  pyproject.toml  quick_system_test.py  requirements.txt  setup_environment.sh
core/: __init__.py  manage.py
coronary_experiments/: asgi.py  settings.py  urls.py  wsgi.py
docs/: AUTO_REFRESH_FIXES_SUMMARY.md  CADICA_DATASET_SUCCESS_SUMMARY.md  CELERY_REDIS_REMOVAL_COMPLETED.md  CELERY_REMOVAL_SUMMARY.md  CLASSIFICATION_GUI_FIXES_FINAL.md  CONTAINER_TESTING_RESULTS.md  CPU_TRAINING_OPTIMIZATION.md  CUSTOM_DATASET_SYSTEM_DESIGN.md  DATASET_MANAGER_STRUCTURE.md  DIRECT_TRAINING_CHANGES_SUMMARY.md  DJANGO_STRUCTURE_REORGANIZATION.md  DOCKER_MEMORY_CONFIG.md  ENHANCED_MLFLOW_APIS_SUMMARY.md  ENHANCED_TRAINING_GUIDE.md  ENHANCED_TRAINING_INTEGRATION.md  FINAL_ARCADE_MLFLOW_FIXES_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FINAL_PROJECT_ORGANIZATION.md  FINAL_RESTRUCTURE_DOCUMENTATION.md  FINAL_TRAINING_FIXES_SUMMARY.md  FIXES_COMPLETED_SUMMARY.md  FIXES_SUMMARY.md  FIXES_SUMMARY_FINAL.md  (+15 more)
(+519 files in other folders)
