[tool.poetry]
name = "coronary-experiments"
version = "0.1.0"
description = ""
authors = ["Piotr Święcik <piotr.swiecik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "2.4.1"
torchvision = "0.19.1"
torchaudio = "2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
